--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Clash Royale Card Display and Flip</title>
     <style>
-        /* Existing styles */
+        /* Your existing CSS styles */
         .card-container {
             perspective: 1000px;
             width: 140px;
@@ -73,19 +73,12 @@
             text-align: center;
             margin: 10px 0;
         }
-        /* New styles for saving and displaying decks */
-        #save-deck-container input[type="text"] {
-            margin-right: 10px;
-            padding: 5px;
-            font-size: 16px;
+        #save-deck-area {
+            text-align: center;
+            margin-top: 20px;
         }
-        #save-deck-container button, #saved-decks button {
-            padding: 5px 10px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        #saved-decks button {
-            margin: 5px;
+        #saved-decks h3 {
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -99,12 +92,11 @@
     <div class="deck-builder-title">Deck (Average Elixir: <span id="average-elixir">0</span>)</div>
     <div id="deck-builder" class="deck-builder"></div>
     <div id="cards"></div>
-   <!-- New HTML for saving and displaying decks -->
-    <div id="save-deck-container" style="margin-top: 20px; text-align: center; display: none;">
-        <input type="text" id="deck-name" placeholder="Enter deck name" />
+    <div id="save-deck-area">
+        <input type="text" id="deck-name" placeholder="Name your deck">
         <button onclick="saveDeck()">Save Deck</button>
     </div>
-    <div id="saved-decks" style="margin-top: 20px;"></div>
+    <div id="saved-decks"><h3>Saved Decks</h3></div>
     <script>
         var cardData = {
     "items": [
@@ -1294,7 +1286,7 @@
             container.appendChild(cardElement);
             return container;
         }
-       function sortCards(criteria, order = 'asc') {
+        function sortCards(criteria, order = 'asc') {
             if (criteria === 'elixir') {
                 cardData.items.sort((a, b) => order === 'asc' ? a.elixirCost - b.elixirCost : b.elixirCost - a.elixirCost);
             } else if (criteria === 'rarity') {
@@ -1324,47 +1316,53 @@
                 cardsContainer.appendChild(createCard(card));
             });
         }
-       displayCards();
-                     function saveDeck() {
+        var savedDecks = {}; // Object to store saved decks
+        function saveDeck() {
             var deckName = document.getElementById('deck-name').value.trim();
-            if (!deckName) {
-                alert('Please enter a deck name.');
+            if (deckName === '') {
+                alert('Please enter a name for your deck.');
                 return;
             }
             if (savedDecks[deckName]) {
-                alert('A deck with this name already exists. Please choose a different name.');
+                alert('A deck with this name already exists.');
                 return;
             }
             savedDecks[deckName] = [...deck];
             displaySavedDecks();
-            alert('Deck saved successfully.');
+            alert('Deck saved successfully!');
+            document.getElementById('deck-name').value = ''; // Clear input field after saving
         }
-       function displaySavedDecks() {
+        function displaySavedDecks() {
             var savedDecksContainer = document.getElementById('saved-decks');
-            savedDecksContainer.innerHTML = '';
+            savedDecksContainer.innerHTML = '<h3>Saved Decks</h3>'; // Reset and keep the title
             Object.keys(savedDecks).forEach(deckName => {
-                var button = document.createElement('button');
-                button.textContent = deckName;
-                button.onclick = function() {
-                    displayDeck(deckName);
+                var btn = document.createElement('button');
+                btn.textContent = deckName;
+                btn.onclick = function() {
+                    loadDeck(deckName);
                 };
-                savedDecksContainer.appendChild(button);
+                savedDecksContainer.appendChild(btn);
             });
         }
-        function displayDeck(deckName) {
-            var deckIds = savedDecks[deckName];
+        function loadDeck(deckName) {
+            var selectedDeck = savedDecks[deckName];
+            if (!selectedDeck) {
+                alert('Deck not found.');
+                return;
+            }
+            deck = [...selectedDeck]; // Copy the saved deck into the current deck
             var deckBuilder = document.getElementById('deck-builder');
-            deckBuilder.innerHTML = '';
-            deck = deckIds;
-            deckIds.forEach(cardId => {
+            deckBuilder.innerHTML = ''; // Clear the deck builder
+            deck.forEach(cardId => {
                 var card = cardData.items.find(item => item.id === cardId);
-                if (card) { // Ensure the card exists in the data
-                    addToDeck(card, true); // Add to deck without checking the deck size
+                if (card) {
+                    addToDeck(card);
                 }
             });
             updateAverageElixir();
-            document.getElementById('save-deck-container').style.display = 'none';
         }
+        displayCards(); // Load and display cards on initial load
+        displaySavedDecks(); // Display any saved decks if available
     </script>
 </body>
 </html>
