--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -80,6 +80,13 @@
         #saved-decks h3 {
             margin-top: 20px;
         }
+        /* Style for the separate deck display */
+        #opened-deck {
+            margin-top: 20px;
+        }
+        #opened-deck h3 {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -97,8 +104,11 @@
         <button onclick="saveDeck()">Save Deck</button>
     </div>
     <div id="saved-decks"><h3>Saved Decks</h3></div>
+    <!-- Additional container for displaying the opened deck separately -->
+    <div id="opened-deck"></div>
+    <div id="selected-deck-area"></div>
     <script>
-        var cardData = {
+      var cardData = {
     "items": [
                 {
       "name": "Knight",
@@ -1233,104 +1243,162 @@
     }
             ],            
         };
-        var deck = []; // Track cards in the deck
-        function addToDeck(card) {
-            var deckBuilder = document.getElementById('deck-builder');
-            if (!deck.includes(card.id) && deck.length < 8) {
-                deck.push(card.id);
-                var cardElement = document.createElement('div');
-                cardElement.className = 'deck-card';
-                cardElement.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}" style="width:100%;">`;
-                cardElement.onclick = function() {
-                    removeCardFromDeck(card.id, cardElement);
-                };
-                deckBuilder.appendChild(cardElement);
-                updateAverageElixir();
-            } else if (deck.includes(card.id)) {
-                alert('This card is already in your deck!');
+var deck = []; // Track cards in the deck
+var savedDecks = {}; // Object to store saved decks
+function addToDeck(card) {
+    var deckBuilder = document.getElementById('deck-builder');
+    if (!deck.includes(card.id) && deck.length < 8) {
+        deck.push(card.id);
+        var cardElement = document.createElement('div');
+        cardElement.className = 'deck-card';
+        cardElement.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}" style="width:100%;">`;
+        cardElement.onclick = function() {
+            removeCardFromDeck(card.id, cardElement);
+        };
+        deckBuilder.appendChild(cardElement);
+        updateAverageElixir();
+    } else if (deck.includes(card.id)) {
+        alert('This card is already in your deck!');
+    } else {
+        alert('Deck is full!');
+    }
+}
+function removeCardFromDeck(cardId, cardElement) {
+    var index = deck.indexOf(cardId);
+    if (index > -1) {
+        deck.splice(index, 1);
+        cardElement.remove();
+        updateAverageElixir();
+    }
+}
+function createCard(card) {
+    var container = document.createElement('div');
+    container.className = 'card-container';
+    var cardElement = document.createElement('div');
+    cardElement.className = 'card';
+    var frontFace = document.createElement('div');
+    frontFace.className = 'card-face card-front';
+    frontFace.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}">`;
+    var backFace = document.createElement('div');
+    backFace.className = 'card-face card-back';
+    backFace.innerHTML = `<strong>${card.name}</strong><br>Elixir: ${card.elixirCost}<br>Rarity: ${card.rarity}<br>`;
+    var addToDeckButton = document.createElement('button');
+    addToDeckButton.innerText = 'Add to Deck';
+    addToDeckButton.onclick = function(event) {
+        event.stopPropagation();
+        addToDeck(card);
+    };
+    backFace.appendChild(addToDeckButton);
+    cardElement.appendChild(frontFace);
+    cardElement.appendChild(backFace);
+    cardElement.addEventListener('click', function() {
+        cardElement.classList.toggle('flipped');
+    });
+    container.appendChild(cardElement);
+    return container;
+}
+function sortCards(criteria, order = 'asc') {
+    if (criteria === 'elixir') {
+        cardData.items.sort((a, b) => order === 'asc' ? a.elixirCost - b.elixirCost : b.elixirCost - a.elixirCost);
+    } else if (criteria === 'rarity') {
+        const rarityOrder = ['common', 'rare', 'epic', 'legendary', 'champion'];
+        cardData.items.sort((a, b) => {
+            if (order === 'asc') {
+                return rarityOrder.indexOf(a.rarity) - rarityOrder.indexOf(b.rarity);
             } else {
-                alert('Deck is full!');
+                return rarityOrder.indexOf(b.rarity) - rarityOrder.indexOf(a.rarity);
             }
-        }
-        function removeCardFromDeck(cardId, cardElement) {
-            var index = deck.indexOf(cardId);
-            if (index > -1) {
-                deck.splice(index, 1);
-                cardElement.remove();
-                updateAverageElixir();
-            }
-        }
-        function createCard(card) {
-            var container = document.createElement('div');
-            container.className = 'card-container';
+        });
+    }
+    displayCards();
+}
+function updateAverageElixir() {
+    var totalElixir = deck.reduce((total, cardId) => {
+        var card = cardData.items.find(item => item.id === cardId);
+        return total + card.elixirCost;
+    }, 0);
+    var averageElixir = deck.length > 0 ? (totalElixir / deck.length).toFixed(2) : '0';
+    document.getElementById('average-elixir').textContent = averageElixir;
+}
+function displayCards() {
+    var cardsContainer = document.getElementById('cards');
+    cardsContainer.innerHTML = ''; // Clear existing cards
+    cardData.items.forEach(card => {
+        cardsContainer.appendChild(createCard(card));
+    });
+}
+function saveDeck() {
+    var deckName = document.getElementById('deck-name').value.trim();
+    if (deckName === '') {
+        alert('Please enter a name for your deck.');
+        return;
+    }
+    if (savedDecks[deckName]) {
+        alert('A deck with this name already exists.');
+        return;
+    }
+    savedDecks[deckName] = [...deck];
+    displaySavedDecks();
+    alert('Deck saved successfully!');
+    document.getElementById('deck-name').value = ''; // Clear input field after saving
+}
+function displaySavedDecks() {
+    var savedDecksContainer = document.getElementById('saved-decks');
+    savedDecksContainer.innerHTML = '<h3>Saved Decks</h3>'; // Reset and keep the title
+    Object.keys(savedDecks).forEach(deckName => {
+        var btn = document.createElement('button');
+        btn.textContent = deckName;
+        btn.onclick = function() {
+            openDeckInSeparateArea(deckName);
+        };
+        savedDecksContainer.appendChild(btn);
+    });
+}
+function openDeckInSeparateArea(deckName) {
+    var selectedDeck = savedDecks[deckName];
+    if (!selectedDeck) {
+        alert('Deck not found.');
+        return;
+    }
+    function openDeckInSeparateArea(deckName) {
+    var selectedDeck = savedDecks[deckName];
+    if (!selectedDeck) {
+        alert('Deck not found.');
+        return;
+    }
+{}
+    var selectedDeckArea = document.getElementById('selected-deck-area');
+    selectedDeckArea.innerHTML = `<h3>${deckName}</h3>`; // Display the name of the deck
+   // Create a container for the cards in the selected deck
+    var deckContainer = document.createElement('div');
+    deckContainer.className = 'deck-container'; // Add a class for styling if needed
+    selectedDeck.forEach(cardId => {
+        var card = cardData.items.find(item => item.id === cardId);
+        if (card) {
             var cardElement = document.createElement('div');
-            cardElement.className = 'card';
-            var frontFace = document.createElement('div');
-            frontFace.className = 'card-face card-front';
-            frontFace.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}">`;
-            var backFace = document.createElement('div');
-            backFace.className = 'card-face card-back';
-            backFace.innerHTML = `<strong>${card.name}</strong><br>Elixir: ${card.elixirCost}<br>Rarity: ${card.rarity}<br>`;
-            var addToDeckButton = document.createElement('button');
-            addToDeckButton.innerText = 'Add to Deck';
-            addToDeckButton.onclick = function(event) {
-                event.stopPropagation();
-                addToDeck(card);
-            };
-            backFace.appendChild(addToDeckButton);
-            cardElement.appendChild(frontFace);
-            cardElement.appendChild(backFace);
-            cardElement.addEventListener('click', function() {
-                cardElement.classList.toggle('flipped');
-            });
-            container.appendChild(cardElement);
-            return container;
+            cardElement.className = 'deck-card';
+            cardElement.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}" style="width:100%;">`;
+            deckContainer.appendChild(cardElement);
         }
-        function sortCards(criteria, order = 'asc') {
-            if (criteria === 'elixir') {
-                cardData.items.sort((a, b) => order === 'asc' ? a.elixirCost - b.elixirCost : b.elixirCost - a.elixirCost);
-            } else if (criteria === 'rarity') {
-                const rarityOrder = ['common', 'rare', 'epic', 'legendary', 'champion'];
-                cardData.items.sort((a, b) => {
-                    if (order === 'asc') {
-                        return rarityOrder.indexOf(a.rarity) - rarityOrder.indexOf(b.rarity);
-                    } else {
-                        return rarityOrder.indexOf(b.rarity) - rarityOrder.indexOf(a.rarity);
-                    }
-                });
-            }
-            displayCards();
-        }
-        function updateAverageElixir() {
-            var totalElixir = deck.reduce((total, cardId) => {
+    });
+    selectedDeckArea.appendChild(deckContainer);
+}
+displayCards(); // Load and display cards on initial load
+displaySavedDecks(); // Display any saved decks if available
+          function openDeckInSeparateArea(deckName) {
+            var selectedDeck = savedDecks[deckName];
+            var openedDeckContainer = document.getElementById('opened-deck');
+            openedDeckContainer.innerHTML = `<h3>Opened Deck: ${deckName}</h3><div class="deck-builder"></div>`; // Reset and prepare to display the opened deck
+            var deckDisplay = openedDeckContainer.querySelector('.deck-builder');
+                        selectedDeck.forEach(cardId => {
                 var card = cardData.items.find(item => item.id === cardId);
-                return total + card.elixirCost;
-            }, 0);
-            var averageElixir = deck.length > 0 ? (totalElixir / deck.length).toFixed(2) : '0';
-            document.getElementById('average-elixir').textContent = averageElixir;
-        }
-        function displayCards() {
-            var cardsContainer = document.getElementById('cards');
-            cardsContainer.innerHTML = ''; // Clear existing cards
-            cardData.items.forEach(card => {
-                cardsContainer.appendChild(createCard(card));
+                if (card) {
+                    var cardElement = document.createElement('div');
+                    cardElement.className = 'deck-card';
+                    cardElement.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}" style="width:100%;">`;
+                    deckDisplay.appendChild(cardElement);
+                }
             });
-        }
-        var savedDecks = {}; // Object to store saved decks
-        function saveDeck() {
-            var deckName = document.getElementById('deck-name').value.trim();
-            if (deckName === '') {
-                alert('Please enter a name for your deck.');
-                return;
-            }
-            if (savedDecks[deckName]) {
-                alert('A deck with this name already exists.');
-                return;
-            }
-            savedDecks[deckName] = [...deck];
-            displaySavedDecks();
-            alert('Deck saved successfully!');
-            document.getElementById('deck-name').value = ''; // Clear input field after saving
         }
         function displaySavedDecks() {
             var savedDecksContainer = document.getElementById('saved-decks');
@@ -1339,30 +1407,14 @@
                 var btn = document.createElement('button');
                 btn.textContent = deckName;
                 btn.onclick = function() {
-                    loadDeck(deckName);
+                    openDeckInSeparateArea(deckName); // Adjust to use the new function for opening decks
                 };
                 savedDecksContainer.appendChild(btn);
             });
         }
-        function loadDeck(deckName) {
-            var selectedDeck = savedDecks[deckName];
-            if (!selectedDeck) {
-                alert('Deck not found.');
-                return;
-            }
-            deck = [...selectedDeck]; // Copy the saved deck into the current deck
-            var deckBuilder = document.getElementById('deck-builder');
-            deckBuilder.innerHTML = ''; // Clear the deck builder
-            deck.forEach(cardId => {
-                var card = cardData.items.find(item => item.id === cardId);
-                if (card) {
-                    addToDeck(card);
-                }
-            });
-            updateAverageElixir();
-        }
-        displayCards(); // Load and display cards on initial load
-        displaySavedDecks(); // Display any saved decks if available
+        // Initial calls to display cards and saved decks
+        displayCards();
+        displaySavedDecks();
     </script>
 </body>
 </html>
