--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -104,7 +104,6 @@
         <button onclick="saveDeck()">Save Deck</button>
     </div>
     <div id="saved-decks"><h3>Saved Decks</h3></div>
-    <!-- Additional container for displaying the opened deck separately -->
     <div id="opened-deck"></div>
     <div id="selected-deck-area"></div>
     <script>
@@ -1366,10 +1365,10 @@ function openDeckInSeparateArea(deckName) {
         alert('Deck not found.');
         return;
     }
+    }
 {}
     var selectedDeckArea = document.getElementById('selected-deck-area');
-    selectedDeckArea.innerHTML = `<h3>${deckName}</h3>`; // Display the name of the deck
-   // Create a container for the cards in the selected deck
+    selectedDeckArea.innerHTML = `<h3>${deckName}</h3>`; 
     var deckContainer = document.createElement('div');
     deckContainer.className = 'deck-container'; // Add a class for styling if needed
     selectedDeck.forEach(cardId => {
