--- a/_posts/2024-02-16-N@TM-Blog.md
+++ b/_posts/2024-02-16-N@TM-Blog.md
@@ -17,5 +17,7 @@ I think that the navigation of our project was pretty poor. I found myself often
 Some feedback I recieved/ noticed was especially for the poeple vieiwing the project that were not kids had no idea of what clash royale was. I was able to explain briefly what the game was, but they had very little understanding truly. I recieved feedback from one of the user's that the decks and card collection really dont serve a deeper purpose. I think it would've been cool to have some sort of a game related to Clash Royal. Lastly, som emore feedback was just easier navigation
 - ## Photos from experience 
 Vance
+<html>
 <img src="images/vance.png" alt="Description of Image">
 <img src="https://ibb.co/xSfS7Fz" alt="Image Description">
+<html>
