--- a/_posts/2024-02-16-N@TM-Blog.md
+++ b/_posts/2024-02-16-N@TM-Blog.md
@@ -18,6 +18,6 @@ Some feedback I recieved/ noticed was especially for the poeple vieiwing the pro
 - ## Photos from experience 
 Vance
 <html>
-<img src="images/vance.png" alt="Description of Image">
+<img src="{{site.baseurl}}/images/vance.png" alt="Description of Image">
 <img src="https://ibb.co/xSfS7Fz" alt="Image Description">
 <html>
