--- a/_posts/2024-02-16-N@TM-Blog.md
+++ b/_posts/2024-02-16-N@TM-Blog.md
@@ -16,8 +16,28 @@ I think that the navigation of our project was pretty poor. I found myself often
 - ## Feedback: 
 Some feedback I recieved/ noticed was especially for the poeple vieiwing the project that were not kids had no idea of what clash royale was. I was able to explain briefly what the game was, but they had very little understanding truly. I recieved feedback from one of the user's that the decks and card collection really dont serve a deeper purpose. I think it would've been cool to have some sort of a game related to Clash Royal. Lastly, som emore feedback was just easier navigation
 - ## Photos from experience 
+
+<html>
 Vance
-<html>
 <img src="{{site.baseurl}}/images/vance.png" alt="Description of Image">
-<img src="https://ibb.co/xSfS7Fz" alt="Image Description">
-<html>
+Bhargav interactions
+<img src="{{site.baseurl}}/images/bhargav.png" alt="Description of Image">
+Saathvik with deck
+<img src="{{site.baseurl}}/images/deck.png" alt="Description of Image">
+Dante Aidan Lau teach
+<img src="{{site.baseurl}}/images/teach.png" alt="Description of Image">
+Team teaching
+<img src="{{site.baseurl}}/images/groupteach.png" alt="Description of Image">
+Ashwin teach
+<img src="{{site.baseurl}}/images/ashwingampa.png" alt="Description of Image">
+Peyton with deck
+<img src="{{site.baseurl}}/images/deck.png" alt="Description of Image">
+Saathvik with deck
+<img src="{{site.baseurl}}/images/ashwingampa.png" alt="Description of Image">
+</html>
+ 
+ ## Blog on event
+## CSP:
+After we finished our review I took the time to go look around the class at other projects that were after/during our time. The main projects I looked at were Saathvik's, Torin's, and Aidan Lau's from Mr. Lopez. Saathvik had a very cool project regarding real estate with a database with information about houses and teh ability to favorite house and locate house near you. Torin's project was very informational, but I especially liked the stock feature. I believe he had it where you can look up a stock and it gives you an in depth analysis of each stock. This could be very useful for people genuinly interested in stocks. Also, I believe he had a live crypto buying feature which was very interesting. Laslty, I viewed Aidan's job finder project. It inlvoves you registering for an account and it finds jobs available near you. Also, they added it where they will respond to you based on your application.
+## Outside of CSP
+I didn't really look at too much outside of CSP I just briefly went through the ceramics room to look at my sister and my friend's pottery, but I saw some very interesting pots, one from my friend who made a shark looking jar. Also, for the photos I went to go look at the photos that lincoln took and he took a very nice photo with a sunflower with a bee in the middle.
