--- a/_posts/2024-02-16-N@TM-Blog.md
+++ b/_posts/2024-02-16-N@TM-Blog.md
@@ -31,9 +31,9 @@ Team teaching
 Ashwin teach
 <img src="{{site.baseurl}}/images/ashwingampa.png" alt="Description of Image">
 Peyton with deck
-<img src="{{site.baseurl}}/images/deck.png" alt="Description of Image">
+<img src="{{site.baseurl}}/images/peytondeck.png" alt="Description of Image">
 Saathvik with deck
-<img src="{{site.baseurl}}/images/ashwingampa.png" alt="Description of Image">
+<img src="{{site.baseurl}}/images/deck.png" alt="Description of Image">
 </html>
  
  ## Blog on event
