--- a/_posts/2024-02-16-N@TM-Blog.md
+++ b/_posts/2024-02-16-N@TM-Blog.md
@@ -1,3 +1,13 @@
+---
+toc: true
+comments: true
+layout: post
+title: Night at the museum
+description: Notes
+courses: {'compsci': {'week': 8}}
+type: hacks
+---
+
 ## My Night at the Museum Experience - Dante
 ## Blog / article on you and team
 - Reflection Glows/ Grows
